fix wrapping

--- a/index.css
+++ b/index.css
@@ -4,40 +4,44 @@ html * {
 code {
     font-family: ui-monospace, monospace;
 }
+p {
+    font-size: medium;
+    white-space: normal;
+}
 header {
     display: flex;
     flex-direction: column;
-    width: 100%;
-}
-p {
-    font-size: medium;
-}
-#line {
-    height: 120px;
-    width: 100%;
-    background-color: rgb(70, 70, 70);
+    justify-content: center;
 }
 #logo {
     max-height: 360px;
+    min-width: 375px;
+    max-width: 100%;
 }
 #container {
     display: flex;
     flex-direction: column;
     max-width: 1024px;
+    min-width: 400px;
+}
+#content {
+    display: block;
+    height: fit-content;
+    margin-left: 16px;
+    margin-right: 16px;
 }
 h1 {
   text-align: center;
-  font-size: 96px;
+  font-size: 72px;
   font-family: ui-monospace, monospace;
-  margin: 8px;
   color: #fff;
+  background-color: #464646;
+  margin: 0px;
+  height: 120px;
 }
 body {
+    margin: 0px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 24px;
-    margin-top: 0px;
-    width: 100%;
-    height: 100%;
 }
